@@ -451,7 +451,7 @@ cal11.time_comp = false;
 </SCRIPT>
 {/if}
 {if $printmenu=="finances"}
-<P><FORM method="post" name="printforms" id="printforms" action="?m=transferforms2" target="_blank">
+<P><FORM method="post" name="printforms" id="printforms" action="?m=print&type=transferforms2" target="_blank">
 <INPUT type="submit" class="hiddenbtn">
 <TABLE width="100%" CELLPADDING="3">
 	<TR class="DARK">
